--- a/nanoFramework.System.Device.I2c.nuspec
+++ b/nanoFramework.System.Device.I2c.nuspec
@@ -5,19 +5,18 @@
     <version>$version$</version>
     <title>nanoFramework.System.Device.I2c</title>
     <authors>nanoFramework project contributors</authors>
-    <owners>nanoFramework project contributors</owners>
+    <owners>nanoFramework,dotnetfoundation</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <license type="expression">MIT</license>
+    <license type="file">LICENSE.md</license>
     <releaseNotes>
     </releaseNotes>
+    <readme>docs\README.md</readme>
     <developmentDependency>false</developmentDependency>
-    <projectUrl>https://github.com/nanoframework/lib-System.Device.I2c</projectUrl>
-    <iconUrl>https://secure.gravatar.com/avatar/97d0e092247f0716db6d4b47b7d1d1ad</iconUrl>
-    <repository type="git" url="https://github.com/nanoframework/lib-System.Device.I2c" commit="$commit$" />
+    <projectUrl>https://github.com/nanoframework/System.Device.I2c</projectUrl>
+    <icon>images\nf-logo.png</icon>
+    <repository type="git" url="https://github.com/nanoframework/System.Device.I2c" commit="$commit$" />
     <copyright>Copyright (c) .NET Foundation and Contributors</copyright>
-    <description>This package includes the System.Device.I2c assembly for nanoFramework C# projects.
-This package requires a target with System.Device.I2c v$nativeVersion$ (checksum $checksum$).</description>
-    <summary>System.Device.I2c assembly for .NET nanoFramework C# projects</summary>
+    <description>This package includes the System.Device.I2c assembly for nanoFramework C# projects.&#10;This package requires a target with System.Device.I2c v$nativeVersion$ (checksum $checksum$).</description>
     <tags>nanoFramework C# csharp netmf netnf System.Device.I2c</tags>
     <dependencies>
       <dependency id="nanoFramework.CoreLibrary" version="1.10.5" />
@@ -29,7 +28,9 @@ This package requires a target with System.Device.I2c v$nativeVersion$ (checksum
     <file src="System.Device.I2c\bin\Release\System.Device.I2c.pdbx" target="lib\System.Device.I2c.pdbx" />
     <file src="System.Device.I2c\bin\Release\System.Device.I2c.pe" target="lib\System.Device.I2c.pe" />
     <file src="System.Device.I2c\bin\Release\System.Device.I2c.xml" target="lib\System.Device.I2c.xml" />
-    <!-- readme -->
-    <file src="readme.txt" target="readme.txt" />
+    <file src="assets\readme.txt" target="" />
+    <file src="README.md" target="docs\" />
+    <file src="assets\nf-logo.png" target="images" />
+    <file src="LICENSE.md" target="" />
   </files>
 </package>
