--- a/nanoFramework.System.Device.I2c.nuspec
+++ b/nanoFramework.System.Device.I2c.nuspec
@@ -20,7 +20,7 @@
 This package requires a target with System.Device.I2c v$nativeVersion$ (checksum $checksum$).</description>
     <tags>nanoFramework C# csharp netmf netnf System.Device.I2c</tags>
     <dependencies>
-      <dependency id="nanoFramework.CoreLibrary" version="1.11.7" />
+      <dependency id="nanoFramework.CoreLibrary" version="1.12.0-preview.1" />
     </dependencies>
   </metadata>
   <files>
