--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,11 +40,17 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  DOTNET_NOLOGO: true
-  solution: 'nanoFramework.System.Device.I2c.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
-  nugetPackageName: 'nanoFramework.System.Device.I2c'
+  - group: sign-client-credentials
+  - name: DOTNET_NOLOGO
+    value: true  
+  - name: buildPlatform
+    value: 'Any CPU'  
+  - name: buildConfiguration
+    value: 'Release'
+  - name: solution
+    value: 'nanoFramework.System.Device.I2c.sln'
+  - name: nugetPackageName
+    value: 'nanoFramework.System.Device.I2c'
 
 steps:
 
