--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -10,6 +10,8 @@ jobs:
   check_package_lock:
     name: nanoFramework
     uses: nanoframework/nf-tools/.github/workflows/check-package-lock.yml@main
+    with:
+      solution: 'nanoFramework.System.Device.I2c.sln'
   check_nuget_latest:
     name: nanoFramework
     uses: nanoframework/nf-tools/.github/workflows/check-packages-updated.yml@main
